feat : 공통 사용 스타일 추가 #59

--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -51,3 +51,21 @@
     margin-bottom: -75%;
   }
 }
+
+@keyframes slidein-left {
+  from {
+    left: -20px;
+  }
+  to {
+    left: -96px;
+  }
+}
+
+@keyframes slideout-left {
+  from {
+    left: -96px;
+  }
+  to {
+    left: 0;
+  }
+}
